@@ -31,7 +31,7 @@ namespace
             setTickLength( QwtScaleDiv::MediumTick, 4 );
             setTickLength( QwtScaleDiv::MajorTick, 8 );
 
-            setPenWidth( 1 );
+            setPenWidthF( 1.0 );
         }
 
         virtual QwtText label( double value ) const
